...
                        Navigator.pop(context);
                      } else {
                        _show(_index + 1);
                      }
                    },
              child: Text(
                _index + 1 == widget.steps.length ? 'Finish tour' : 'Next',
              ),
            ),
          ],
        ),
      ),
    ],
...
